processed/jira/txt/LU/LU-12263.txt
Key:        LU-12263
Summary:    build breakage with 2.12.53 tag
Link:       https://jira.whamcloud.com/browse/LU-12263
Type:       Bug
Priority:   Blocker
Status:     Resolved
Resolution: Duplicate
Assignee:   Hongchao Zhang
Reporter:   Oleg Drokin
Created:    Thu, 2 May 2019 06:28:38 +0000
Updated:    Mon, 25 Nov 2019 20:48:40 +0000
Resolved:   Fri, 12 Jul 2019 22:36:30 +0000

--- Description ---
We got hit by a time bomb again it looks like.

This time LMV_HASH_FLAG_DEAD is only defined until 2.12.52 or below.

In file included from /tmp/rpmbuild-lustre-jenkins-VTQiYiSB/BUILD/lustre-2.12.53/libcfs/include/libcfs/libcfs.h:45:0,
                from /tmp/rpmbuild-lustre-jenkins-VTQiYiSB/BUILD/lustre-2.12.53/lustre/include/obd_support.h:42,
                from /tmp/rpmbuild-lustre-jenkins-VTQiYiSB/BUILD/lustre-2.12.53/lustre/ptlrpc/wiretest.c:40:
/tmp/rpmbuild-lustre-jenkins-VTQiYiSB/BUILD/lustre-2.12.53/lustre/ptlrpc/wiretest.c: In function 'lustre_assert_wire_constants':
/tmp/rpmbuild-lustre-jenkins-VTQiYiSB/BUILD/lustre-2.12.53/lustre/ptlrpc/wiretest.c:1854:11: error: 'LMV_HASH_FLAG_DEAD' undeclared (first use in this function)
 CLASSERT(LMV_HASH_FLAG_DEAD == 0x40000000);
          ^
/tmp/rpmbuild-lustre-jenkins-VTQiYiSB/BUILD/lustre-2.12.53/libcfs/include/libcfs/libcfs_private.h:363:46: note: in definition of macro 'CLASSERT'
#define CLASSERT(cond) do {switch (1) {case (cond): case 0: break; } } while (0)
                                             ^
/tmp/rpmbuild-lustre-jenkins-VTQiYiSB/BUILD/lustre-2.12.53/lustre/ptlrpc/wiretest.c:1854:11: note: each undeclared identifier is reported only once for each function it appears in
 CLASSERT(LMV_HASH_FLAG_DEAD == 0x40000000);
          ^
/tmp/rpmbuild-lustre-jenkins-VTQiYiSB/BUILD/lustre-2.12.53/libcfs/include/libcfs/libcfs_private.h:363:46: note: in definition of macro 'CLASSERT'
#define CLASSERT(cond) do {switch (1) {case (cond): case 0: break; } } while (0)
                                             ^
/tmp/rpmbuild-lustre-jenkins-VTQiYiSB/BUILD/lustre-2.12.53/lustre/ptlrpc/wiretest.c: At top level:
cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]
cc1: all warnings being treated as errors
make[7]: *** [/tmp/rpmbuild-lustre-jenkins-VTQiYiSB/BUILD/lustre-2.12.53/lustre/ptlrpc/wiretest.o] Error 1
make[7]: *** Waiting for unfinished jobs....
make[6]: *** [/tmp/rpmbuild-lustre-jenkins-VTQiYiSB/BUILD/lustre-2.12.53/lustre/ptlrpc] Error 2
make[5]: *** [/tmp/rpmbuild-lustre-jenkins-VTQiYiSB/BUILD/lustre-2.12.53/lustre] Error 2
make[4]: *** [_module_/tmp/rpmbuild-lustre-jenkins-VTQiYiSB/BUILD/lustre-2.12.53] Error 2
make[3]: *** [modules] Error 2
make[2]: *** [all-recursive] Error 1
make[1]: *** [all] Error 2

--- Comment (pjones, Fri, 12 Jul 2019 22:36:30 +0000) ---
As per Hongchao, this has been fixed by the landing of https://review.whamcloud.com/#/c/35318/

--- Comment (adilger, Mon, 8 Jul 2019 23:24:03 +0000) ---
At this point, it makes sense to just delete all uses of LMV_HASH_FLAG_DEAD rather than making the code conditional on the version.

--- Comment (pjones, Fri, 14 Jun 2019 17:21:22 +0000) ---
Hongchao

Can you please investigate?

Thanks

Peter

--- Comment (gerrit, Thu, 2 May 2019 06:43:09 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/34793/

Subject: LU-12263 build: push depreciation of LMV_HASH_FLAG_DEAD to 2.12.55

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: be5483d3cdd72b275c13954b721d1890165e55de

--- Comment (gerrit, Thu, 2 May 2019 06:30:10 +0000) ---
Oleg Drokin (green@whamcloud.com) uploaded a new patch: https://review.whamcloud.com/34793

Subject: LU-12263 build: push depreciation of LMV_HASH_FLAG_DEAD to 2.12.55

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 8876f1ba909d33e188a57a06f3f35197d7308746
